--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/mydb
+spring.datasource.username=myadmin
+spring.datasource.password=854216kl
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
