--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
+	implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
 }
 
 tasks.named('test') {
