feat: 권한에 맞는 화면 구성 및 API 호출 - 사용자 권한에 따라 다른 UI 구성 - 사용자 권한에 따라 API 제한

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=myadmin
 spring.datasource.password=854216kl
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.com.test=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.properties.hibernate.format_sql=true
